# circle-maze

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DEPLOY.md  Dockerfile  README.md  app.json  build-wasm.sh  build.rs  nginx.conf  prompt
src/: building_blocks.rs  circle_coord.rs  json.rs  json_maze.rs  lib.rs  main.rs  maze.rs  merge.rs  svg.rs
src/svg/: borders.rs  geometry.rs  markers.rs  mod.rs  solution_path.rs
tests/fixtures/: maze_03_circles_00.json  maze_03_circles_01.json  maze_03_circles_02.json  maze_04_circles_01.json  maze_04_circles_02.json  maze_05_circles_01.json  maze_05_circles_02.json  maze_06_circles_00.json  maze_06_circles_01.json  maze_06_circles_02.json  maze_20_circles_00.json  maze_30_circles_00.json  maze_30_circles_01.json  maze_30_circles_02.json  maze_4_circles.json  maze_5_circles.json
web/: app.js  index.html
web/pkg/: circle_maze.d.ts  circle_maze.js  circle_maze_bg.wasm  circle_maze_bg.wasm.d.ts  package.json
