[package]
name = "circle-maze"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
fraction = "0.15.3"
getrandom = "0.3.4"
rand = { version = "0.9.2", features = ["small_rng"] }
serde_json = "1.0.146"
wasm-bindgen = "0.2.106"

[dev-dependencies]
roxmltree = "0.20.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.4", features = ["wasm_js"] }
